--- a/Sprint-HTML-Package/Sprint/index.html
+++ b/Sprint-HTML-Package/Sprint/index.html
@@ -159,24 +159,21 @@
       <div class="container"> 
         <!-- Tittle -->
         <div class="tittle">
-          <h4>About our agency</h4>
-          <p>He's a demon on wheels. The mate was a mighty sailin' man the Skipper brave and sure. Five passengers set sail that day for a three hour tour a three hour tour the ship set ground on the shore of this uncharted</p>
+          <h4>About us</h4>
+          <p>Introducing Augmented and Virtual Reality to the world, one experience at a time.&nbsp; &nbsp; &nbsp;</p>
         </div>
         <ul class="row">
           <li class="col-sm-4"> <img class="img-responsive" src="images/about-img-1.jpg" alt="" >
             <h6 class="margin-top-20">Who we are</h6>
-            <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one
-              um. What might be right for you the.</p>
+            <p>A group of 3 batchmates in university&nbsp; who are massively motivated to create virtual experience and games. We bring photorealistic experiences through our vision.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
           </li>
           <li class="col-sm-4"> <img class="img-responsive" src="images/about-img-2.jpg" alt="" >
             <h6 class="margin-top-20">our mission</h6>
-            <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one
-              um. What might be right for you the.</p>
+            <p>Our creativity is unparalled with the industry by imbibing incredible thoughts and motives of solving real world problems.</p>
           </li>
           <li class="col-sm-4"> <img class="img-responsive" src="images/about-img-3.jpg" alt="" >
             <h6 class="margin-top-20">our vision</h6>
-            <p>Can you tell me how to get how to get to SesaStreet. Now the world don't move to the beat of just one
-              um. What might be right for you the.</p>
+            <p>To allow the world to experience premium Mixed Reality experience with improved devices to embrace the new 'reality'.</p>
           </li>
         </ul>
       </div>
