--- a/Sprint-HTML-Package/Sprint/blog.html
+++ b/Sprint-HTML-Package/Sprint/blog.html
@@ -39,33 +39,14 @@
   <div id="main-wrapper">
     <header class="main-header">
       <div class="container-fuild">
-        <div class="logo"> <a href="#."> <img src="images/logo.png" alt="Sprint Logo"></a> </div>
+        <div class="logo"> <a href="#."> <img src="images/logo.png" alt="XDE Studios Logo"
+											  width="53.4" height="59.5"></a> </div>
         
         <!-- Nav -->
         <nav>
           <ul id="ownmenu" class="ownmenu">
-            <li class="active"><a href="index.html"> HOME</a>
-              <ul class="dropdown">
-                <li><a href="index.html">HOME 1</a></li>
-                <li><a href="index-2.html">HOME 2</a></li>
-                <li><a href="index-3.html">HOME 3</a></li>
-              </ul>
-            </li>
-            <li><a href="index.html"> Pages</a>
-              <ul class="dropdown">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="index-2.html">HOME</a></li>
-                <li><a href="index-3.html">HOME</a></li>
-                <li><a href="about.html">about us</a></li>
-                <li><a href="services.html">services</a></li>
-                <li><a href="portfolio-1.html">portfolio 1</a></li>
-                <li><a href="portfolio-2.html">portfolio 2</a></li>
-                <li><a href="portfolio-detail.html">portfolio Detail</a></li>
-                <li><a href="blog.html">blog</a></li>
-                <li><a href="blog-single.html">blog Single</a></li>
-                <li><a href="contact.html">contact us</a></li>
-              </ul>
-            </li>
+            <li class="active"><a href="index.html"> HOME</a></li>
+            <li><a href="index.html"> Pages</a></li>
             <li><a href="about.html">about us</a></li>
             <li><a href="services.html">services</a></li>
             <li><a href="portfolio-1.html">portfolio</a></li>
