--- a/Sprint-HTML-Package/Sprint/portfolio-2.html
+++ b/Sprint-HTML-Package/Sprint/portfolio-2.html
@@ -39,7 +39,8 @@
   <div id="main-wrapper">
     <header class="main-header">
       <div class="container-fuild">
-        <div class="logo"> <a href="#."> <img src="images/logo.png" alt="Sprint Logo"></a> </div>
+        <div class="logo"> <a href="#."> <img src="images/logo.png" alt="XDE Studios Logo"
+											  width="53.4" height="59.5"></a> </div>
         
         <!-- Nav -->
         <nav>
