--- a/Sprint-HTML-Package/Sprint/index.html
+++ b/Sprint-HTML-Package/Sprint/index.html
@@ -186,7 +186,7 @@
         <div class="tittle">
           <h4>services  we provide</h4>
           <p>2D and 3D Games | VR Flight Simulators | Corporate Shoots | AR Applications</p>
-          <p>3D Animations | Photogrammetry | Metaverse&nbsp; &nbsp; &nbsp;</p>
+          <p>3D Animations | Photogrammetry | 360 Experiences&nbsp; &nbsp; &nbsp;</p>
         </div>
         
         <!-- Service Row -->
@@ -301,7 +301,7 @@
               <div role="tabpanel" class="tab-pane" id="clean">
                 <div class="detail-in"> <img class="img-responsive" src="images/why-choose-img-1.jpg" alt="">
                   <div class="text-content col-md-8"> <i class="fa fa-leaf"></i>
-                    <p>The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the million aire and his wife didn't need no welfare states</p>
+                    <p>Optimised to work at high refresh rates, our applications make loading screens an extinct element</p>
                   </div>
                 </div>
               </div>
@@ -310,7 +310,7 @@
               <div role="tabpanel" class="tab-pane" id="modular">
                 <div class="detail-in"> <img class="img-responsive" src="images/why-choose-img-1.jpg" alt="">
                   <div class="text-content col-md-8"> <i class="fa fa-pencil"></i>
-                    <p>The ship set ground on the shore of this uncharted desert isle with Gilligan the Skipper too the million aire and his wife didn't need no welfare states</p>
+                    <p>Built to work on Android, iOS, MacOS, Oculus, HTC, Windows and Playstation; we have got you covered in all fields of experiences</p>
                   </div>
                 </div>
               </div>
