--- a/Sprint-HTML-Package/Sprint/services.html
+++ b/Sprint-HTML-Package/Sprint/services.html
@@ -94,8 +94,8 @@
       <div class="container"> 
         <!-- Tittle -->
         <div class="tittle">
-          <h4>services what we provide</h4>
-          <p>He's a demon on wheels. The mate was a mighty sailin' man the Skipper brave and sure. Five passengers set sail that day for a three hour tour a three hour tour the ship set ground on the shore of this uncharted</p>
+          <h4>services  we provide</h4>
+          <p>Bringing the exquisite experience to you, with&nbsp;&nbsp;</p>
         </div>
         
         <!-- Service Row -->
